--- a/style.css
+++ b/style.css
@@ -10,9 +10,19 @@ body {
     background-color: #f2f2f2;
 }
 
+.title{
+    padding: 20px;
+    margin: 20px;
+}
+
 .container {
     max-width: 500px;
     margin: auto;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .countdown-container {
